# nocodb-to-gpt-via-api

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  scheduled_workflow.yml  test_sample.py
.github/workflows/: scheduled.yml
docs/: ANALYSIS.md  ARCHITECTURE.md  NOTES.md
